[gd_scene load_steps=23 format=2]

[ext_resource path="res://juego/font/ROBOTECH GP.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://recursos/RecursosPresentacion/Revamped.otf" type="DynamicFontData" id=2]
[ext_resource path="res://juego/menus/Fondo.tscn" type="PackedScene" id=3]
[ext_resource path="res://juego/menus/MenuAjustes.gd" type="Script" id=4]
[ext_resource path="res://recursos/audio/sfx/select_1.wav" type="AudioStream" id=5]
[ext_resource path="res://juego/menus/CambiarVolumen.gd" type="Script" id=6]
[ext_resource path="res://juego/menus/ContenedorAccion.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=12]
size = 26
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 37
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 44
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 37
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 35
extra_spacing_char = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.164706, 0.745098, 0.819608, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.345098, 0.305882, 0.305882, 1 )

[node name="MenuAjustes" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
menu_inicio = "res://juego/menus/MenuInicio.tscn"

[node name="Fondo" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 480.5, 338.73 )
scale = Vector2( 0.749219, 0.82575 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="BotonSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Musica" type="AudioStreamPlayer" parent="."]

[node name="ContenedorTabulador" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -92.0
custom_fonts/font = SubResource( 12 )
tab_align = 0

[node name="AudioVideo" type="Tabs" parent="ContenedorTabulador"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Fondo2" parent="ContenedorTabulador/AudioVideo" instance=ExtResource( 3 )]
position = Vector2( 477, 292.23 )
scale = Vector2( 0.75, 0.829917 )

[node name="Titulo" type="Label" parent="ContenedorTabulador/AudioVideo"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -78.5
margin_top = 10.0
margin_right = 78.5
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "AJUSTES"

[node name="PanelPrincipal" type="Panel" parent="ContenedorTabulador/AudioVideo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -332.0
margin_top = -200.5
margin_right = 332.0
margin_bottom = 200.5

[node name="ContenedorPrincipal" type="VBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -291.0
margin_top = -191.5
margin_right = 291.0
margin_bottom = 207.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Pantalla" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_right = 582.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "PANTALLA"
align = 1

[node name="HSeparator" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 50.0
margin_right = 582.0
margin_bottom = 54.0

[node name="Resolucion" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 58.0
margin_right = 582.0
margin_bottom = 114.0
alignment = 1

[node name="TextoResolucion" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_left = 192.0
margin_top = 7.0
margin_right = 357.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "Resolucion"

[node name="OpcionResolucion" type="OptionButton" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion"]
margin_left = 361.0
margin_right = 390.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )

[node name="PantallaCompleta" type="CheckBox" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 118.0
margin_right = 582.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 5 )
text = "PANTALLA COMPLETA"
align = 1

[node name="HSeparator2" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 170.0
margin_right = 582.0
margin_bottom = 174.0

[node name="HSeparator3" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 178.0
margin_right = 582.0
margin_bottom = 182.0

[node name="Label" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 186.0
margin_right = 582.0
margin_bottom = 226.0
custom_fonts/font = SubResource( 6 )
text = "VOLUMEN"
align = 1

[node name="HSeparator4" type="HSeparator" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 230.0
margin_right = 582.0
margin_bottom = 234.0

[node name="VolumenGeneral" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 238.0
margin_right = 582.0
margin_bottom = 282.0
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 128.0
margin_top = 2.0
margin_right = 303.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "GENERAL     "

[node name="SubirVolumenGeneral" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 307.0
margin_right = 336.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 8 )
text = "+"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 340.0
margin_top = 3.0
margin_right = 420.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 9 )
text = "  10  "

[node name="BajarVolumenGeneral" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral"]
margin_left = 424.0
margin_right = 453.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
text = "-"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="VolumenMusica" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 286.0
margin_right = 582.0
margin_bottom = 330.0
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 132.0
margin_top = 2.0
margin_right = 299.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "MUSICA      "

[node name="SubirVolumenMusica" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 303.0
margin_right = 332.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 8 )
text = "+"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 336.0
margin_top = 3.0
margin_right = 416.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 9 )
text = "  10  "

[node name="BajarVolumenMusica" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica"]
margin_left = 420.0
margin_right = 449.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
text = "-"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="VolumenSFX" type="HBoxContainer" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal"]
margin_top = 334.0
margin_right = 582.0
margin_bottom = 378.0
alignment = 1

[node name="TextoVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 132.0
margin_top = 2.0
margin_right = 300.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 7 )
text = "SFX          "

[node name="SubirVolumenSFX" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 304.0
margin_right = 333.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 8 )
text = "+"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="NivelVolumen" type="Label" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 337.0
margin_top = 3.0
margin_right = 417.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 9 )
text = "  10  "

[node name="BajarVolumenSFX" type="Button" parent="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX"]
margin_left = 421.0
margin_right = 450.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 10 )
text = "-"
flat = true
script = ExtResource( 6 )
nodo_sfx = NodePath("../../../../../../BotonSFX")

[node name="Inputs" type="Tabs" parent="ContenedorTabulador"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 48.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Fondo" parent="ContenedorTabulador/Inputs" instance=ExtResource( 3 )]
position = Vector2( 477.5, 290.96 )
scale = Vector2( 0.747656, 0.825111 )

[node name="Label" type="Label" parent="ContenedorTabulador/Inputs"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -301.0
margin_top = 36.0
margin_right = 378.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 13 )
text = "Clic en el boton para asignar nueva tecla"

[node name="ContenedorRemapeo" type="VBoxContainer" parent="ContenedorTabulador/Inputs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -409.5
margin_top = -160.0
margin_right = 409.5
margin_bottom = 160.0

[node name="ContenedorSaltar" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 7 )]
margin_right = 819.0
margin_bottom = 60.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorSaltar" index="0"]
margin_top = 7.0
margin_right = 403.0
margin_bottom = 52.0
text = "Saltar"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorSaltar" index="1"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 60.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorSaltar" index="2"]
margin_left = 415.0
margin_right = 819.0
margin_bottom = 60.0
accion = "saltar"

[node name="ContenedorAdelante" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 7 )]
margin_top = 64.0
margin_right = 819.0
margin_bottom = 125.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAdelante" index="0"]
margin_top = 8.0
margin_right = 403.0
margin_bottom = 53.0
text = "Adelante"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAdelante" index="1"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 61.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAdelante" index="2"]
margin_left = 415.0
margin_right = 819.0
margin_bottom = 61.0
accion = "mov_adelante"

[node name="ContenedorAtras" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 7 )]
margin_top = 129.0
margin_right = 819.0
margin_bottom = 190.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAtras" index="0"]
margin_top = 8.0
margin_right = 403.0
margin_bottom = 53.0
text = "Atras"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAtras" index="1"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 61.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAtras" index="2"]
margin_left = 415.0
margin_right = 819.0
margin_bottom = 61.0
accion = "mov_atras"

[node name="ContenedorIzquierda" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 7 )]
margin_top = 194.0
margin_right = 819.0
margin_bottom = 255.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorIzquierda" index="0"]
margin_top = 8.0
margin_right = 403.0
margin_bottom = 53.0
text = "Izquierda"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorIzquierda" index="1"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 61.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorIzquierda" index="2"]
margin_left = 415.0
margin_right = 819.0
margin_bottom = 61.0
accion = "mov_izquierda"

[node name="ContenedorDerecha" parent="ContenedorTabulador/Inputs/ContenedorRemapeo" instance=ExtResource( 7 )]
margin_top = 259.0
margin_right = 819.0
margin_bottom = 320.0

[node name="NombreAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorDerecha" index="0"]
margin_top = 8.0
margin_right = 403.0
margin_bottom = 53.0
text = "Derecha"

[node name="VSeparator" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorDerecha" index="1"]
margin_left = 407.0
margin_right = 411.0
margin_bottom = 61.0

[node name="InputAccion" parent="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorDerecha" index="2"]
margin_left = 415.0
margin_right = 819.0
margin_bottom = 61.0
accion = "mov_derecha"

[node name="BotonRegresar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -131.0
margin_right = 406.0
margin_bottom = -88.0
custom_fonts/font = SubResource( 11 )
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "MENU PRINCIPAL"

[connection signal="item_selected" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/Resolucion/OpcionResolucion" to="." method="_on_OpcionResolucion_item_selected"]
[connection signal="toggled" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/PantallaCompleta" to="." method="_on_PantallaCompleta_toggled"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/SubirVolumenGeneral" to="." method="_on_SubirVolumenGeneral_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenGeneral/BajarVolumenGeneral" to="." method="_on_BajarVolumenGeneral_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/SubirVolumenMusica" to="." method="_on_SubirVolumenMusica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenMusica/BajarVolumenMusica" to="." method="_on_BajarVolumenMusica_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/SubirVolumenSFX" to="." method="_on_SubirVolumenSFX_pressed"]
[connection signal="pressed" from="ContenedorTabulador/AudioVideo/PanelPrincipal/ContenedorPrincipal/VolumenSFX/BajarVolumenSFX" to="." method="_on_BajarVolumenSFX_pressed"]
[connection signal="pressed" from="BotonRegresar" to="." method="_on_BotonRegresar_pressed"]

[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorSaltar"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAdelante"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorAtras"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorIzquierda"]
[editable path="ContenedorTabulador/Inputs/ContenedorRemapeo/ContenedorDerecha"]
